--- a/backend/package.json
+++ b/backend/package.json
@@ -28,10 +28,12 @@
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "helmet": "^6.1.5",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.9.0"
   }
 }
